adding popper and checking

--- a/lists_conversion_experience.rmd
+++ b/lists_conversion_experience.rmd
@@ -23,12 +23,12 @@ options(htmltools.dir.version = FALSE)
 output <- opts_knit$get("rmarkdown.pandoc.to")
 opts_chunk$set(warning=FALSE)
 opts_chunk$set(message=FALSE)
-opts_chunk$set(error=TRUE)
+opts_chunk$set(echo=FALSE)
+opts_chunk$set(error=FALSE)
 opts_chunk$set(cache=TRUE)
 ```
 
 ## Abstract
-
 
 This paper investigates practices of list-making associated with online grocery shopping at a UK-global supermarket chain, Tesco. 
 It reconstructs an account of how a recommender system suggests a small number of grocery items of personal relevance to each of the millions of online grocery shoppers. 
@@ -42,11 +42,9 @@ The conversion of lists from finite to in-definite in recommender systems sugges
  
 Online grocery shopping at Tesco, a large supermarket chain based in the UK, includes recommendations for further grocery purchases under the title of 'Have you forgotten?'. When customers shop for groceries online, a list of five recommendations appear at the checkout stage. These recommendations are the product of a recommender system, an important category of operational device in big data (see for instance [@Striphas_2015] for analysis of Netflix recommendation; [@Morris_2015]  or [@Seaver_2015] for an account of music recommendations]).  The question 'have you forgotten?' is followed by some  grocery items that could have been or are usually on a shopping list. The title of the suggestions is a bit misleading: the recommender system, as we will see, is not concerned with forgetting, with the many slips and oversights associated with shopping lists,  but rather with items that you didn't know what should be on your list, perhaps because you have never thought of putting them there.
 
-The shelves of large contemporary supermarket are the endpoint of global logistic supply chains, in all their logistical, value-transforming and brand-mediated hypercomplexity (see [@Nielson_2012; @Tsing_2008] on logistics and power are the endpoint of global logistic supply chains, in all their logistical, value-transforming and brand-mediated hypercomplexity).  Groceries imply a geography of agriculture, industry, transport, communication and financialisation driven by flows of labour and capital. Encounters between this hyper-complex geography and people, even in the confines of a supermarket, are no simple matter, either for shoppers or for supermarket operators such as Tesco. While there are many facets to shopping [@Miller_2013], the shopping list, whether written on the back of an envelope, or saved as a list in an online grocery shopping system, is one intersectional ordering device that configures a universe of possible references, and a teeming multitude of propensities, into a possible order (in both senses of that term: an ordering and an imperative). As people shop, either by  trawling along aisles packed with thousands of products, or scrolling down screens or searching for particular brands amidst search results, lists inscribe some kind of order that filters or reduces the excessive propensities, claims, dazzle and distraction of commodities.
+The shelves of large contemporary supermarket are the endpoint of global logistic supply chains, in all their logistical, value-transforming and brand-mediated hypercomplexity (see [@Neilson_2012; @Tsing_2009] on logistics and power are the endpoint of global logistic supply chains, in all their logistical, value-transforming and brand-mediated hypercomplexity).  Groceries imply a geography of agriculture, industry, transport, communication and financialisation driven by flows of labour and capital. Encounters between this hyper-complex geography and people, even in the confines of a supermarket, are no simple matter, either for shoppers or for supermarket operators such as Tesco. While there are many facets to shopping [@Miller_2013], the shopping list, whether written on the back of an envelope, or saved as a list in an online grocery shopping system, is one intersectional ordering device that configures a universe of possible references, and a teeming multitude of propensities, into a possible order (in both senses of that term: an ordering and an imperative). As people shop, either by  trawling along aisles packed with thousands of products, or scrolling down screens or searching for particular brands amidst search results, lists inscribe some kind of order that filters or reduces the excessive propensities, claims, dazzle and distraction of commodities.
 
 While hand-written shopping lists undoubtedly have ongoing importance and display interestingly mixed ordering practices (see the list of handwritten shopping lists at [Grocery List](http://www.grocerylist.org)), online shopping lists take shape at the intersection of web and internet infrastructures, supply chain logistics, individualised practices and *habitus,* and increasingly, the predictive operations of  recommender systems. Just as the aisles and shelves of a supermarket present a commercially-ordered geography of the world,  online shopping recommender systems generate lists that seek to align people to commodities they otherwise might have little relation to.  
-
-[HERE]
 
 ```{r random-basket, echo=FALSE, cache=TRUE, fig.cap='Random basket'}
 library(dplyr)
@@ -58,21 +56,19 @@ df = bind_rows(sapply(csvs, read_tsv))
 kable(sample_n(df, size=5)$name, col.names='item')
 ```
 
-
 ```{r shopping-hand}
 include_graphics('figure/1_shopping.png')
 ```
 
 The items on this list could be recommendations. They are only a few of them: five. The question is: which five items and in what order? In terms of content, there are many similarities between shopping lists such as Figure \@ref(fig:shopping-hand)  -- a dozen lines scrawled on the back of a used envelope stuck on the refrigerator door  --  and the five ranked items shown to a customer on an online shopping site (as shown in Table \@ref(tab:random-basket)). While they are similar in content,  the list of five suggestions shown to Tesco's online customers at the checkout  exemplify a transformation in forms of ordering, a transformation that may affect the ontological texture of the world in the same way that commodification does. In its re-writing of the list, the recommender system effects a conversion experience in which individualised desire, consumption practices, value-chains, infrastructural time-space dynamics, the lives of others and the propensities of things all come into play.   A major contemporary form of ordering, the recommendation list, that we see in many  forms of news, media, entertainment, marketing, advertising, can be seen as what the philosopher of science Karl Popper called  a 'crystallisation of propensities' [@Popper_1990, 18].
 
-The presentation I saw was not really surprising or exceptional. It was a presentation by a data scientist to data scientists, describing an implementation of a predictive model as well as some of the problems and potentials of the predictive model.  I see the presentation itself as providing materials for an argument about our experience of predictive ordering. In this paper, I re-present the presentation using a mixture of theoretical and practical resources. The theory is largely recent media theory and its accounts of prediction in media. The practical resources are that of coding and predictive models.[^12]
+The Tesco presentation I saw was not really surprising or exceptional. It was a presentation by a data scientist to data scientists, describing an implementation of a predictive model as well as some of the problems and potentials of the predictive model.  The presentation provides some materials for an exploration of the form, techniques, and to certain extent, experience of predictive ordering. In this paper, I re-present the presentation using a mixture of theoretical and practical resources. The theory is largely recent media theory and its accounts of prediction. The practical resources are that of coding and predictive models, and online grocery data.[^12]
 
 [^12]: The problem of incomplete lists reminds me of the game 'I went shopping and I bought ... ' that adults sometimes play with children.  The game is about remembering a well-ordered list of items - 'a' is apple, 'b' is for banana, 'c' is for carrot.  The point of the game is to use the well-ordered set of labels provided by the sequence of letters in the alphabet to remember a random and perhaps very diverse list of items. The longer the game continues, the harder it is to remember since the shopping list grows longer. At the same time, each player repeats the list, and this  helps memorisation. One trick in playing this game is to choose items that are quite unexpected or increasingly random. Rather than `ham`, list `halva`; rather than `fish`, add `face cream.` This is especially useful for adults in beating children. The children have better memories for items they know, but adults know more unexpected items. On the other hand, very unexpected items are quite easy to remember and tend to even the score in the favour of the children. Balancing between the improbable and memorable, between a predictable list like 'apples, bananas, carrots' and an unusual list such as 'agave syrup, boccadilla, cilantro' is complicated. Something similar applies to recommender systems. The system can remember very many things. It may know everything you bought in the last few years on that site, and it can easily see what you would normally buy and add those as suggestions.
 
-Despite being titled 'Have You Forgotten?' Tesco's recommender system does not suggest forgotten items.  It focuses on 'conversion events.' If a shopper does buy  recommended items, 'conversion' has occurred.  From a supermarket perspective, high-value conversion are desirable. There is little value in successfully recommending small or cheap items such as rubber bands or toothpicks.  From a data science perspective, conversion events, when they occur, confirm the power of predictive analytics to change the world in some way. From a sociological perspective, constructing and configuring recommender system in the name of conversion events, the recommender system effects an epistemic-operational transformation central to big data as an operational formation that responds to an ongoing control crisis [@Beniger_1986]. This central transformation is that the idea that data affords apprehension, visibility and management of associative propensities in the world.  Recommender systems, then, are concerned with the conversion of social order. 
+Despite being titled 'Have You Forgotten?' Tesco's recommender system does not suggest forgotten items.  It focuses on 'conversion events.' If a shopper does buy  recommended items, 'conversion' has occurred.  From a supermarket perspective, high-value conversion are desirable. There is little value in successfully recommending small or cheap items such as rubber bands or toothpicks.  From a data science perspective, conversion events, when they occur, confirm the power of predictive analytics to change the world in some way. From a sociological perspective, matters are less obvious. Constructing and configuring recommender system in the name of conversion events, the recommender system effects an epistemic-operational transformation central to big data. We might regard the recommender system as an operational formation that responds to an ongoing control crisis associated with information [@Beniger_1986]. We might also explore these conversion events in terms of how predictive analytics happens in the world, how the tendency of things to realize certain events -- what the philosopher science Karl Popper terms the propensities of things [@Popper_1990, 11] -- happens in and through data practices.   Data in concert with calculation, models, infrastructures, and experiments, affords apprehension, visibility and management of associative propensities in the world.  Recommender systems, then, are vitally concerned not just with conversion events, but also with the what counts as order in the world. 
 
-
-## Lists in and as data 
+## Lists and order
 
 Lists have long interested historians, anthropologists, sociologists, literary and media theorists. If, as the social anthropologist Jack Goody argued, lists are historically primary as forms of writing [@Goody_1986], and if list-making and its later variants (e.g. tables) precede discursive and narrative writing practices, then we might expect lists to function as powerful social ordering devices. As literary scholars suggest (see [@Mainberger_2003]), although lists have often been de-valued as literary forms, list-making often appears, even in literary form, whenever writing seeks to address, name, group or evoke totality, profusion, excess or abundance. More recent sociological work on lists (see [@deGoede_2016] for an oveview) confirms the potency of lists as ordering devices. From both  anthropological and literary perspectives, shopping lists have excellent reasons to exist: they are deeply rooted in urban social formations historically and culturally. Lists such as online grocery recommendations weave together people, infrastructures, things, places and predictions.[^1.456]    
 
@@ -80,7 +76,6 @@ Lists have long interested historians, anthropologists, sociologists, literary a
 
 We might, in the light of their mutability, permeability and embedding in social order,  approach lists from various theoretical angles -- as asignifying semiotics as Maurizio Lazzarato calls it in his _Signs and Machines_ [@Lazzarato_2014] or as elements in 'a new order of spatio-temporal continuity for forms of economic, political and cultural life' as Celia Lury puts it in her account of topological turn [@Lury_2012]. In this paper, I focus on lists and list-making in terms of the predictive conditions of contemporary media experience [@Hansen_2015a].
 
-HERE 
 All lists are forms of order. Mathematicians distinguish lists from sets on the basis of order. Formally, both lists and sets are collections, but a list also contains a mapping of its elements to an ordering, usually the natural or counting numbers. Sometimes this order is explicit. Numbers are written down one side of the list. Often the order is implicit to the spatial arrangement of the list.  Even random order can be  operationally important (for instance, in gambling machine or a psychology experiment, randomly order lists might be important).  Mappings between list order and social order are manifestly highly contingent. Listing practices in a given social setting, however, always index its engagement with necessary unstable dynamics of social order. From the perspective of social order, shopping lists, as they are co-constructed by a supermarket chain's recommender system, might be important intersectional zones for the conversion of the average everydayness of lists through data-analytic propensities. 
 
 The media theorist Mark Hansen has recently suggested that 
@@ -131,8 +126,6 @@ The main narrative of Patel's presentation concerned a shift from a well-establi
 
 While Tesco  succeeded in data-mining its customers,  and perhaps became the UK's biggest supermarket with the help of data-mining in the 1990s, the online shopping environment  in 2016 is a bit different. It is no longer organised around campaigns involving special offers or redemption of points for demographically segmented customer (DunnHumby made heavy use of UK Census data). It can no longer rely on placement of goods in carefully chosen locations in stores. It needs or at least might want to continuously up-sell and cross-sell to customers who might hardly ever be in the supermarket itself. If 'Tesco is the clear winner in the online grocery market, in fact it takes almost 50p of every £1 spent on food shopping on the internet' [How SEO helps Tesco to dominate the online grocery market](https://econsultancy.com/blog/64841-how-seo-helps-tesco-to-dominate-the-online-grocery-market)[@Silverwood-Cope_2014], then Tesco itself has undergone some kind of conversion?
 
-![People add to list](figure/online_lists_in_practice.png)
-
 How could we characterise the shift from ClubCard data mining to online grocery markets?  Patel described her work at DunnHumby in terms of a shift in models from a 'rules-based list' to a 'relevancy model.' The relevancy model changed how the 'Have You Forgotten' list was constructed.   This shift is a typical of broader re-organisation of prediction in which existing predictive practices are being re-distributed and intensified in particular ways. The shift in models pivots on a more probabilistic structuring of lists.  The ostensible banality of the 'Have you forgotten?' recommendations betrays micrological signs of a topologically complex predictive infrastructure that subducts people and things in significant ways. 
 
 ## Reconfiguring recommendations
@@ -142,9 +135,6 @@ Academic researchers first began writing about recommender systems in the mid-19
 > In everyday life, we rely on recommendations from other people. ... Recommender systems augment this natural social process. In a typical recommender  system, people provide recommendations as inputs, which the system then aggregates and directs to appropriate recipients. In some cases the primary transformation is in the aggregation; in others the system’s value lies in its ability to make good matches between the recommenders and those seeking recommendations.[@Resnick_1997,56] 
 
 Writing just after the advent of web-based e-Commerce, Resnick and Varian  imagined recommender systems augmenting the 'collaborative filtering' that people do when they write and read reviews of products and services (for instance, on the travel website, TripAdvisor; [@Scott_2012]). In 1997, two decades ago, Resnick and Varian thought that 'people provide recommendations' and recommender systems would aggregate and rank for recipients. A slightly later review, [@Schafer_2001], diagrams an augmented 'natural social process' with a range of elements, technologies, inputs and outputs, with varying degrees of personalization. 
-
-![Early e-commerce recommender system architecture](figure/schafer_recommendation_2001.png)
-
 
 The shift from or conversion of  collaborative filtering appeared in Patel's presentations. Patel describes the move from 'a rules-based system'  to  a 'personal relevance model'. Each term in that phrase -- personal, relevance and model -- has some weight in the conversion work. We can assume that What Patel refers to as  the rule-based system refers  to the `apriori` algorithm, developed  by Rakesh Agrawal and Ramakrishnan Srikanti at IBM Research Alameda in the early 1990s [@Agrawal_1994]. A now-classic approach to 'market basket analysis,' it was listed as one of the top ten data mining algorithms in a survey conducted amongst data miners [@Wu_2008] and usually attracts a chapter in data-mining and some machine learning textbooks (e.g. [@Hastie_2009]). 
 
@@ -177,10 +167,10 @@ Although data mining for association rules finds relations things, it struggles 
     tesco = na.omit(tesco)
     tesco$actual = as.integer(tesco$actual)
 
-    ggplot(tesco[tesco$actual>50,], aes(x=labels, y=actual, fill=labels)) +geom_bar(stat='identity') + coord_flip() + ggtitle('Tesco grocery items with more than 50 products') + theme(legend.position="none", axis.text=element_text(size=9))
+    ggplot(tesco[tesco$actual>50,], aes(x=labels, y=actual, fill=labels)) +geom_bar(stat='identity') + coord_flip() + ggtitle('Tesco grocery items with more than 50 products') + theme(legend.position="none", axis.text=element_text(size=7))
 ```
 
-Items in the`Groceries` dataset proliferate into a Tesco's list of branded variations. The 169 items of the `Groceries` dataset  expand into roughly `r total` Tesco items.  This is, I would suggest, a form of propensity in Hansen's terms, albeit one that occurs in, or very close to, the recommender system rather than  'in the world.' The multiple listed  in the `Grocery` dataset becomes more open in this setting through new impersonal intersections that must be bounded and ordered. The problem that the proliferation of things on the shelves of supermarket or grocery warehouse confronts is partly combinatorial. `r total` products (actually Patel mentioned 200,000 products) can be combined ways. If a typical shopping list has 20 items, then there are `r format(choose(total, 20), 2)` possible lists. Some of this vast number of possible shopping lists are highly unlikely in terms of typical purchasing patterns, but potentially highly interesting and value as recommendation. 
+Items in the `Groceries` dataset proliferate into a Tesco's list of branded variations. The 169 items of the `Groceries` dataset  expand into roughly `r total` Tesco items.  This is, I would suggest, a form of propensity in Hansen's terms, albeit one that occurs in, or very close to, the recommender system rather than  'in the world.' The multiple listed  in the `Grocery` dataset becomes more open in this setting through new impersonal intersections that must be bounded and ordered. The problem that the proliferation of things on the shelves of supermarket or grocery warehouse confronts is partly combinatorial. `r total` products (actually Patel mentioned 200,000 products) can be combined ways. If a typical shopping list has 20 items, then there are `r format(choose(total, 20), 2)` possible lists. Some of this vast number of possible shopping lists are highly unlikely in terms of typical purchasing patterns, but potentially highly interesting and value as recommendation. 
 
 Amidst this proliferation of possibles multiple, the recommender system  starts to become a site of ordering -- in both senses of that term -- of things and people together in shopping lists. They are less the inscriptions of a discrete agent than an effect of an environment teeming with possible combinations and complementarities, a surplus of associations that the market needs to both maintain and limit. For instance, given that Tesco lists more than 1000 chicken products on its site, how can a customer practically discriminate between chicken products? Patel mentioned that some people log on and go straight to the checkout, allowing the recommender system to supply them with the suggestions that they then move to the shopping basket. A `r total` list of items is quite hard to list let alone read. Going straight to the recommendation list is the predictive equivalent of using an old shopping list and only adding new items when needed. 
 
@@ -196,7 +186,7 @@ It uses many shopping lists to identify associations between things and then use
 
 Hansen attributes 'real potential' to data. In terms that somewhat echo big data epistemics, data has an associative propensity, according to Hansen:
 
-> [S]urrounding any delimited predictive system is a larger field of data -- what I elsewhere call a “surplus of sensibility” -- that, viewed speculatively, indexes the causal efficacy of the total situation within which this delimited system operates. (Effectively, the latter gains its reliability from closing off this larger surplus of sensibility, thereby transforming an always excessive propensity into a [provisionally] closed dataset.) Because it affords data that exceed whatever any given predictive system might include, the data of the world’s causal efficacy -- the data constituting its real potentiality -- always and in principle facilitates knowledge that cannot be restricted to any particular agenda [@Hansen_2015, 126-7].
+> [S]urrounding any delimited predictive system is a larger field of data -- what I elsewhere call a “surplus of sensibility” -- that, viewed speculatively, indexes the causal efficacy of the total situation within which this delimited system operates. (Effectively, the latter gains its reliability from closing off this larger surplus of sensibility, thereby transforming an always excessive propensity into a [provisionally] closed dataset.) Because it affords data that exceed whatever any given predictive system might include, the data of the world’s causal efficacy -- the data constituting its real potentiality -- always and in principle facilitates knowledge that cannot be restricted to any particular agenda [@Hansen_2015a, 126-7].
 
 The underlying contrast between an open world and a 'provisionally closed dataset' is both enabling and limiting. Hansen's account opposes closed prediction to the open propensities of a data-world. A closed set is surrounded and conditioned by an open set teeming with potentials. If we think of the  new model that Patel describes as the delimited (or delimiting?) system within   the larger surplus of sensibility, how would that help us understand what the 'Have you forgotten?' recommendations do? It enables us to understand -- as we will see next -- what the Tesco relevancy model borrows from the world. It limits, on the other hand, our understanding of how predictive analytics, or any other ordering device, themselves remain open, require configuration, and only exist amidst technical ensembles whose operation remains obscure.   
 
@@ -217,14 +207,12 @@ A  very brief comment from Patel -- 'we have lots of zeros' -- points to the loc
 ```{r sparsity, echo=FALSE, cache=TRUE, fig.margin=FALSE, fig.cap ='Sparsity of the customer-product association matrix' }
 library(ggplot2)
 library(reshape2)
-p = as.logical(rbinom(n=2e5, size=1, prob=0.001))
+p = as.logical(rnorm(n=2e5, size=1, prob=0.01))
 m = (matrix(p, nrow=1000, byrow=TRUE))
-
 melted <- melt(m)
 melted$value <- as.logical(melted$value)
 ggplot(melted, aes(x = Var2, y = Var1, fill = value)) + geom_tile() +
-    scale_fill_manual(values = c("grey", "black")) + xlab('Customer id') + ylab('Product id')
- 
+    scale_fill_manual(values = c("grey", "red")) + xlab('Customer id') + ylab('Product id') + theme(legend.position='none')
 ```
 
 Since so many people buy milk, the recommendation system might end up always recommending milk products. So the data needs to be 'corrected' by, as Patel reports, removing -- under-sampling -- some of the data for common purchases.   Secondly, even if a recommendation system finds uncommon items that are good recommendations, they should neither be too cheap ('low spend'), nor, as we will see too similar to what the customer has already ordered.
@@ -248,15 +236,12 @@ It is perhaps significant that this random allocation of customers to control an
 
 ## Infrastructure: realtime engine serves up top 5
 
-![Realtime infrastructure and its limits](figure/hadoop.png)
 
 Much discussion of recent media has highlighted its real-time operation (see [@Kittler_1993; @Virilio_1997; @Hansen_2015; @Bollmer_2016]). Patel's description of the relevancy model infrastructure suggested a different temporal patterning. While raw data from Tesco Online feeds into the model every hour, a recommendation list for each customer is only generated once a week. Customers only shop online every few days at the most, and in some cases, only every few weeks. To continually update the top 200 recommendations for every customer would be computationally expensive.   
 
 A customer does not see their 200 weekly recommendations. The recommender system generates recommendations, but after 'applying business rules, only five are  shown on the Tesco Online website. Patel briefly mentioned  specific infrastructural elements such as `hadoop` [@ApacheSoftwareFoundation_2009]. The logistics of running a predictive model affect listing practices.  The possibility of adjusting the recommendations for every customer weekly derives from an infrastructure capable of collecting data, assimilating that data to a predictive model able to generate approximately 200 million relevant recommendations, where 'relevance' depends on a matrix of probabilities of associations between people and things that shifts in time. Like the global supply chain logistics optimised for flow of commodities [@Tsing_2009; @Nielson_2012], `hadoop` and its legion of variants (`mahout`, `spark`, `hive`, `pig`, `yarn`) operationalise flows of data at an infrastructural rather than analytic scale. In many respects, the quickly glossed-over infrastructural deployment of DunnHumby's relevancy model is the primary conversion event: the logistic regression model at the heart of the recommender system is no longer an analytical device but an operational one. 
 
 ## Similarity, substitution, complementarity and micrological propensities
-
-![Basket similarity](figure/patel_basket_similarity.png)
 
 The propensities of things become probabilities in predictive analytics only to the extent that probabilities themselves become propensities. Recommendations are relevant in a recommender system or any other predictive model to the precise extent of their probability. Relevance is closely connected to propensities in the predictive condition. From DunnHumby's standpoint, the relevance of a recommendation relates directly to conversion events. Conversion events happen in the world. They actualise a propensity that hitherto remained either latent or potential. From the standpoint of the ontological conversion between probability and propensity,  prediction stems from the propensities of things, what Hansen describes as the 'complex and diffuse calculus' that only subsequently and provisionally congeals as a conversion event. The 'micrological propensities' of things support the relevance of recommendations. 
 
@@ -270,12 +255,11 @@ Similarly, modelling complementarities between things for a particular person en
 
 ## Conclusion
 
-In their intersection with mundane practices of ordering, recommender systems offer some guidance to the ways that predictive practices affect existing  forms of social order in the world. Rather than directly positing an ontological transformation, I have explored some of the practices of conversion associated with a shift from a data-mining rule-based system to a predictive recommender system. The DunnHumby model and the Tesco 'Have You Forgotten?' recommendations present many of the traits of the conversion processes associated with big data. We have seen several types of conversion events: ongoing transformation of models and infrastructures, the experimentalisation  of recommendations, and the broader diffusion of a calculus of probabilities into a fibrous weave of contingencies and conditionalities, warping over time. 
+In their intersection with mundane practices of ordering, recommender systems offer some guidance to the ways that predictive practices affect existing  forms of social order in the world. Rather than directly positing an ontological transformation, I have explored some of the practices of conversion associated with a shift from a data-mining rule-based system to a predictive recommender system. The DunnHumby model and the Tesco 'Have You Forgotten?' recommendations present many of the traits of the conversion processes associated with big data. We have seen several types of conversion events: ongoing transformation of models and infrastructures, the experimentalisation  of recommendations, and the broader diffusion of a calculus of probabilities into a fibrous weave of propensities and conditionalities, warping over time. The predictive assemblages respond to problems of logistical ensembles more generally.
 
-Following Hansen, I have been suggesting that the predictive listing in the form of open-ended recommendation is symptomatic of changes in social order. 
-Predictive media or recommender systems would be seen as the closed realisation of the  open propensities of the world. By understanding the world in terms of propensities, he argues, we have a chance  to engage with contemporary predictive processes in ways that both acknowledge their relentless and exhausting pressure to consume more and retain some chance of inhabiting the world differently. 
+Following Hansen, I have been suggesting that the predictive listing in the form of open-ended recommendation changes social order. It alters the way in which repetition or reiteration, exemplified in the list, participating in real situations, and their possibilities. By following Popper in understanding the world in terms of propensities, we have a chance  to engage with contemporary predictive processes in ways that both acknowledge their relentless and exhausting pressure to consume more and retain some chance of inhabiting the world differently. 
 
-I diverge from Hansen in accounting for this change. Rather than looking for a speculative theory that sets out a world in which prediction would be the closed form of an ontologically open world ('the propensities of things'), we might understand the predictive conversion as constitutively incomplete. Shopping lists  exemplify this incompleteness and ineradicable openness of prediction.  The constitutive incompleteness and openness of lists are very closely entangled with problems of social order amidst predictive operations. Lists undergoing a 'conversion' experience as they become more probabilistic, but their heterogeneous character as operations caught up in models, infrastructures, experiments, and the flow of commodities means that they can never form a closed set or dataset. The problem of 'constructing good features,' a problem that any predictive model must address, persists as the site of experiment with structures that lack closure. A constitutive openness to new associations, new combinations, new groupings or actors is integral to the conversion event. 
+I diverge from Hansen in making sense of predictive practice. Rather than understanding prediction as the closed form of an ontologically open world ('the propensities of things'), the DunnHumby relevance model, in all its statistical, infrastructural, organisational and banal complexity, suggest that predictive conversion remains constitutively incomplete. Predictive practice abounds in propensities. Ironically, shopping lists  exemplify this incompleteness and ineradicable openness of prediction practice.  The constitutive incompleteness and openness of lists are very closely entangled with problems of social order amidst predictive operations. Lists undergoing a 'conversion' experience as they become more probabilistic, but their heterogeneous character as operations caught up in models, infrastructures, experiments, and the flow of commodities means that they can never form a closed set or dataset. The problem of 'constructing good features,' a problem that any predictive model must address, persists as the site of experiment with structures that lack closure. A constitutive openness to new associations, new combinations, new groupings or actors is integral to the conversion event. 
 
 In their account of the Netflix recommender system, Ted Hallinan and Peter Striphas make the following argument:
 
